--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,15 +13,15 @@
                         
 
 
-                        <label for="555" class="control-label">Login</label>
+                        <label for="555" class="control-label">Логин</label>
                         <input type="text" class="form-control" id="555" data-ng-model="loginData.userName" required autofocus>
 
 
-                        <label for="555" class="control-label">Password</label>
+                        <label for="555" class="control-label">Пароль</label>
                         <input type="password" class="form-control" id="555" data-ng-model="loginData.password" required>
                         
 
-                        <a href="javascript:void(0)" class="button_login" data-ng-click="login()">Log In</a>
+                        <a href="javascript:void(0)" class="button_login" data-ng-click="login()">Войти</a>
 
                         
                         <div data-ng-hide="message == ''" class="alert alert-danger">
@@ -31,7 +31,7 @@
                <!-- <a class="button_login" href="#/login" role="button">Login</a>-->
             </div>
             <div class="col-xs-12 ">
-                <a class="button_signup" href="#/signup" role="button">Sign Up</a>
+                <a class="button_signup" href="#/signup" role="button">Регистрация</a>
             </div>
         </div>
     </div>
