--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -8,15 +8,15 @@
 
 
             <form class="form-login" role="form">
-                <h2 class="form-login-heading">Sign up</h2>
+                <h2 class="form-login-heading">Регистрация</h2>
 
-                <label for="555" class="control-label">Login</label>
+                <label for="555" class="control-label">Введите логин</label>
                 <input type="text" class="form-control" id="555" data-ng-model="registration.userName" required autofocus>
-                <label for="555" class="control-label">Password</label>
+                <label for="555" class="control-label">Введите пароль</label>
                 <input type="password" class="form-control" id="555" data-ng-model="registration.password" required>
-                <label for="555" class="control-label">Confirm password</label>
+                <label for="555" class="control-label">Подтвердите пароль</label>
                 <input type="password" class="form-control" id="555" data-ng-model="registration.confirmPassword" required>
-                <a href="javascript:void(0)" class="btn button_signup" data-ng-click="signUp()">Sign Up</a>
+                <a href="javascript:void(0)" class="btn button_signup" data-ng-click="signUp()">Зарегистрироваться</a>
 
 
                 <!--<input type="text" class="form-control" placeholder="Username" data-ng-model="registration.userName" required autofocus>
