cleaned from old files

--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -16,6 +16,10 @@
                     <p class="help-block">Example block-level help text here.</p>
                 </div>-->
 
+                
+                <!--<div class="col-xs-4 avatarChoice" ng-repeat="avatar in Avatars" data-ng-click="getAvatarUrl(avatar)">
+                    <img src="{{avatar}}">
+                </div>-->
 
 
                 <label for="555" class="control-label">Имя</label>
