--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,11 @@ a:focus{
 }
 
 
-
+.avatarChoice img{
+  width: 100%;
+}
 .main_menu{
+
   text-align: center;
   box-shadow: 0 0 10px rgba(0,0,0,0.1)
 }
