--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,15 +1,11 @@
 
-<div class="row home_content">
+<div class="row ">
     <div class="col-xs-1">
         &nbsp;
     </div>
-    <div class="col-xs-10">
-        
-
-
-            <form class="form-login" role="form">
+    <div class="col-xs-10">      
+        <form class="form-login" role="form">
                 <h2 class="form-login-heading">Регистрация</h2>
-
                 <label for="555" class="control-label">Введите логин</label>
                 <input type="text" class="form-control" id="555" data-ng-model="registration.userName" required autofocus>
                 <label for="555" class="control-label">Введите пароль</label>
@@ -17,12 +13,6 @@
                 <label for="555" class="control-label">Подтвердите пароль</label>
                 <input type="password" class="form-control" id="555" data-ng-model="registration.confirmPassword" required>
                 <a href="javascript:void(0)" class="btn button_signup" data-ng-click="signUp()">Зарегистрироваться</a>
-
-
-                <!--<input type="text" class="form-control" placeholder="Username" data-ng-model="registration.userName" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" data-ng-model="registration.password" required>
-                <input type="password" class="form-control" placeholder="Confirm Password" data-ng-model="registration.confirmPassword" required>
-                <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="signUp()">Submit</button>-->
                 <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
                     {{message}}
                 </div>
